2008-12-11  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo-doc/ccss-cairo-docs.sgml:
	* ccss-cairo-doc/ccss-cairo-sections.txt:
	* ccss-cairo-doc/tmpl/ccss.sgml:
	* ccss-cairo/Makefile.am:
	* ccss-cairo/ccss-cairo-style-priv.h:
	* ccss-cairo/ccss-cairo-style.c (lookup_property_r),
	(ccss_cairo_style_draw_line), (gather_stroke), (gather_join),
	(gather_outline), (ccss_cairo_style_get_double),
	(ccss_cairo_style_get_string), (ccss_cairo_style_get_property):
	* ccss-cairo/ccss-cairo.c:
	* ccss-cairo/ccss-cairo.sym:
	* ccss-doc/ccss-docs.sgml:
	* ccss-doc/ccss-sections.txt:
	* ccss-doc/tmpl/ccss.sgml:
	* ccss-gtk/Makefile.am:
	* ccss-gtk/ccss-gtk.c:
	* ccss-gtk/ccss-gtk.sym:
	* ccss/Makefile.am:
	* ccss/ccss.c:
	* ccss/ccss.sym:
	* examples/example-1.c (main):
	* examples/example-2.c (main):
	* examples/example-3.c (main):
	* examples/example-4.c (main):
	* examples/example-5.c (main):
	Get rid of _init() and _shutdown() functions.

2008-12-11  Robert Staudinger  <robsta@gnome.org>

	* configure.in: correctly depend ccss <- ccss-cairo <- ccss-gtk.

2008-12-10  Robert Staudinger  <robsta@gnome.org>

	* ccss-cairo/ccss-background-parser.c:
	* ccss-cairo/ccss-border-parser.c:
	* ccss-cairo/ccss-cairo-grammar.c:
	* ccss-gtk/Makefile.am:
	* ccss-gtk/ccss-gtk-grammar.c (ccss_gtk_grammar_create):
	* ccss-gtk/ccss-gtk-property.c (parse_gboolean),
	(parse_gchararray), (parse_gfloat), (parse_gint), (parse_guchar),
	(parse_gdk_color), (parse_gtk_border), (parse_gtk_relief_style),
	(parse_gtk_requisition), (parse_gtk_shadow_type),
	(parse_gtk_toolbar_space_style), (parse_gtk_style_property),
	(property_destroy), (property_convert), (property_factory),
	(peek_property_class), (ccss_gtk_property_get_property_classes),
	(ccss_gtk_property_set_fallback_class),
	(ccss_gtk_property_is_style_property):
	* ccss-gtk/ccss-gtk-property.h:
	* ccss-gtk/ccss-gtk-style.c:
	* ccss-gtk/ccss-gtk-style.h:
	* ccss-gtk/ccss-gtk-stylesheet.c (get_type), (get_id),